--- a/src/main/resources/assets/iris/lang/zh_cn.json
+++ b/src/main/resources/assets/iris/lang/zh_cn.json
@@ -15,6 +15,8 @@
   "options.iris.apply": "应用",
   "options.iris.refresh": "刷新",
   "options.iris.openShaderPackFolder": "打开光影包文件夹...",
+  "options.iris.shaderPackSettings": "光影包设置...",
+  "options.iris.shaderPackList": "光影包列表...",
   "options.iris.refreshShaderPacks": "刷新光影包",
   "options.iris.shaderPackSelection": "光影包...",
   "options.iris.shaderPackSelection.title": "光影包",
@@ -26,10 +28,21 @@
   "options.iris.shaderPackSelection.copyErrorAlreadyExists": "\"%s\" 已存在于光影包文件夹中！",
   "options.iris.shaders.disabled": "光影：已禁用",
   "options.iris.shaders.enabled": "光影：已启用",
+  "options.iris.back": "返回",
+  "options.iris.reset": "重置",
+  "options.iris.reset.tooltip": "重置所有设置并应用？",
+  "options.iris.reset.tooltip.holdShift": "按住Shift并点击重置",
+  "options.iris.setToDefault": "将设置还原到默认？",
+  "options.iris.profile": "配置",
+  "options.iris.profile.custom": "自定义",
   "options.iris.shadowDistance": "最大阴影距离",
   "options.iris.shadowDistance.enabled": "允许更改阴影的最远距离。超出此距离的地形和实体不会投射阴影。降低阴影距离可以显著提高性能。",
   "options.iris.shadowDistance.disabled": "当前的光影包已经为阴影设置了渲染距离，你不能改变。",
   
   "pack.iris.select.title": "选择",
+  "pack.iris.configure.title": "配置",
   "pack.iris.list.label": "+ 拖放光影包以添加"
+  
+  "label.iris.true": "开",
+  "label.iris.false": "关"
 }
